# AlgorithmW

./: .gitignore  AlgorithmW.cabal  AlgorithmW.lhs  ChangeLog.md  LICENSE  README.md  bibliography.bib  stack.yaml
