name:                AlgorithmW
version:             0.1.1.0
synopsis:            Example implementation of Algorithm W for Hindley-Milner 
		     type inference.
description:         Complete implementation of the classic
		     algorithm W for Hindley-Milner polymorphic 
		     type inference in Haskell.
homepage:            https://github.com/mgrabmueller/AlgorithmW
bug-reports:         https://github.com/mgrabmueller/AlgorithmW/issues
license:             BSD3
license-file:        LICENSE
author:              Martin Grabmueller
maintainer:          martin@grabmueller.de
category:            Development
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  bibliography.bib README.md ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/mgrabmueller/AlgorithmW

executable AlgorithmW
  main-is:             AlgorithmW.lhs
  build-depends:       base >=4.5 && <4.9, containers >=0.4 && <0.6, mtl >=2.1 && <2.3, pretty >=1.1 && <1.2
  default-language:    Haskell2010
